--- a/helidonKafka/pom.xml
+++ b/helidonKafka/pom.xml
@@ -123,7 +123,11 @@
     <artifactId>commons-lang3</artifactId>
     <version>3.12.0</version>
 </dependency>
-
+<dependency>
+    <groupId>io.nats</groupId>
+    <artifactId>jnats</artifactId>
+    <version>2.20.5</version>
+</dependency>
     </dependencies>
 <repositories>
         <!-- tag::exampleRepo[] -->
